--- a/example/post_example/public/index.html
+++ b/example/post_example/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hi</title>
+    <title>write article</title>
 </head>
 <body>
 <form action="http://localhost:3000/post" method="post">
